--- a/release/index.html
+++ b/release/index.html
@@ -1,20 +1,50 @@
 <!doctype html>
-<html data-ng-app="app" data-ng-csp="">
+<html ng-app="app" ng-csp style="overflow-y:scroll;">
   <head>
     <meta charset="UTF-8">
     <title>Alpha</title>
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/print.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="/css/normalize.min.css">
+    <link rel="stylesheet" href="/css/print.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/ionicons.min.css">
+    <link rel="stylesheet" href="/css/app.min.css">
   </head>
   <body>
-    <div class="container">
-    Hello
-    </div>
-    <script src="./js/angular/angular.min.js"></script>
-    <script src="./js/angular/angular-animate.min.js"></script>
-    <script src="./js/angular-ui/release/angular-ui-router.min.js"></script>
-    <script src="./js/app.js"></script>
+    <header class="navbar navbar-static-top navbar-default" id="top" role="banner">
+      <div class="container">
+        <div class="navbar-header">
+          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a ui-sref="home" class="navbar-brand">Perhata</a>
+        </div>
+        <!--<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+          <ul class="nav navbar-nav">
+            <li><a ui-sref="sekolah.biodata">Biodata</a></li>
+            <li><a ui-sref="sekolah.instrumen">Instrumen</a></li>
+            <li><a ui-sref="sekolah.laporan">Laporan</a></li>
+            <li><a ui-sref="sekolah.pendaftaran">Pendaftaran</a></li>
+          </ul>
+        </nav>-->
+      </div>
+    </header>
+
+    <div ui-view></div>
+
+    <script src="/js/jquery/dist/jquery.min.js"></script>
+    <script src="/js/angular/angular.min.js"></script>
+    <script src="/js/angular-animate/angular-animate.min.js"></script>
+    <script src="/js/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="/js/taffydb/taffy-min.js"></script>
+
+    <script src="/js/meta/daerah.js"></script>
+    <script src="/js/meta/instrumen.js"></script>
+    <script src="/js/meta/program.js"></script>
+
+    <script src="/js/app.js"></script>
+
   </body>
 </html>
