working on instrumen

--- a/release/index.html
+++ b/release/index.html
@@ -38,6 +38,8 @@
     <script src="/js/angular/angular.min.js"></script>
     <script src="/js/angular-animate/angular-animate.min.js"></script>
     <script src="/js/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="/js/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="/js/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="/js/taffydb/taffy-min.js"></script>
 
     <script src="/js/meta/daerah.js"></script>
