working on instrument

--- a/src/js/sekolah/biodata/sekolah-program.html
+++ b/src/js/sekolah/biodata/sekolah-program.html
@@ -6,7 +6,7 @@
         <label class="control-label">Program Pendidikan *</label>
         <select 
             class="form-control input-sm" 
-            ng-model="program.sprodi_id"
+            ng-model="program.id"
             ng-options="program.id as program.nama for program in prodi">
         </select>
     </div>
