working on calculator

--- a/release/index.html
+++ b/release/index.html
@@ -42,6 +42,7 @@
     <script src="/js/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="/js/taffydb/taffy-min.js"></script>
 
+    <script src="/js/meta/calculator.js"></script>
     <script src="/js/meta/daerah.js"></script>
     <script src="/js/meta/instrumen.js"></script>
     <script src="/js/meta/program.js"></script>
