--- a/release/index.html
+++ b/release/index.html
@@ -3,50 +3,27 @@
   <head>
     <meta charset="UTF-8">
     <title>Alpha</title>
-    <link rel="stylesheet" href="/css/normalize.min.css">
-    <link rel="stylesheet" href="/css/print.min.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/ionicons.min.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bower_components/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="/css/app.min.css">
   </head>
   <body>
-    <header class="navbar navbar-static-top navbar-default" id="top" role="banner">
-      <div class="container">
-        <div class="navbar-header">
-          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a ui-sref="home" class="navbar-brand">Perhata</a>
-        </div>
-        <!--<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-          <ul class="nav navbar-nav">
-            <li><a ui-sref="sekolah.biodata">Biodata</a></li>
-            <li><a ui-sref="sekolah.instrumen">Instrumen</a></li>
-            <li><a ui-sref="sekolah.laporan">Laporan</a></li>
-            <li><a ui-sref="sekolah.pendaftaran">Pendaftaran</a></li>
-          </ul>
-        </nav>-->
-      </div>
-    </header>
 
+    <base href="/">
+    
     <div ui-view></div>
 
-    <script src="/js/jquery/dist/jquery.min.js"></script>
-    <script src="/js/angular/angular.min.js"></script>
-    <script src="/js/angular-animate/angular-animate.min.js"></script>
-    <script src="/js/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="/js/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="/js/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <script src="/js/taffydb/taffy-min.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/angular/angular.min.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="/bower_components/taffydb/taffy-min.js"></script>
 
-    <script src="/js/meta/calculator.js"></script>
-    <script src="/js/meta/daerah.js"></script>
-    <script src="/js/meta/instrumen.js"></script>
-    <script src="/js/meta/program.js"></script>
-
+    <script src="/js/instrumen.js"></script>
+    <script src="/js/daerah.js"></script>
+    <script src="/js/program.js"></script>
     <script src="/js/app.js"></script>
 
   </body>
