--- a/src/js/sekolah/home/sekolah-home.html
+++ b/src/js/sekolah/home/sekolah-home.html
@@ -20,17 +20,19 @@
             <div ui-view></div>
         </div>
         <div class="col-sm-3">
-            <div class="nav-sidebar pull-right">
-                <ul class="nav">
-                    <li ui-sref-active="active"><a ui-sref="sekolah-home.index"><i class="icon ion-ios7-browsers-outline"></i> Home</a></li>
-                    <li ui-sref-active="active"><a ui-sref="sekolah-home.biodata"><i class="icon ion-ios7-people-outline"></i> Biodata</a></li>
-                    <li ui-sref-active="active"><a ui-sref="sekolah-home.instrumen"><i class="icon ion-ios7-compose-outline"></i> Pengisian Instrumen</a></li>
-                    <li ui-sref-active="active"><a ui-sref="sekolah-home.laporan"><i class="icon ion-ios7-printer-outline"></i> Cetak Laporan</a></li>
-                </ul>
-                <hr />
-                <ul class="nav">
-                    <li ui-sref-active="active"><a ui-sref="sekolah-home.pendaftaran"><i class="icon ion-ios7-paperplane-outline"></i> Pendaftaran</a></li>
-                </ul>
+            <div affix class="affix" data-offset-top="60" data-offset-bottom="200">
+                <div class="nav-sidebar pull-right">
+                    <ul class="nav">
+                        <li ui-sref-active="active"><a ui-sref="sekolah-home.index"><i class="icon ion-ios7-browsers-outline"></i> Home</a></li>
+                        <li ui-sref-active="active"><a ui-sref="sekolah-home.biodata"><i class="icon ion-ios7-people-outline"></i> Biodata</a></li>
+                        <li ui-sref-active="active"><a ui-sref="sekolah-home.instrumen"><i class="icon ion-ios7-compose-outline"></i> Pengisian Instrumen</a></li>
+                        <li ui-sref-active="active"><a ui-sref="sekolah-home.laporan"><i class="icon ion-ios7-printer-outline"></i> Cetak Laporan</a></li>
+                    </ul>
+                    <hr />
+                    <ul class="nav">
+                        <li ui-sref-active="active"><a ui-sref="sekolah-home.pendaftaran"><i class="icon ion-ios7-paperplane-outline"></i> Pendaftaran</a></li>
+                    </ul>
+                </div>
             </div>
 
         </div>
