--- a/release/index.html
+++ b/release/index.html
@@ -20,7 +20,8 @@
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="/bower_components/taffydb/taffy-min.js"></script>
-
+    <script src="/bower_components/bootstrap/js/affix.js"></script>
+    
     <script src="/js/instrumen.js"></script>
     <script src="/js/daerah.js"></script>
     <script src="/js/program.js"></script>
