wrap to webstore

--- a/src/js/sekolah/home/sekolah-home.html
+++ b/src/js/sekolah/home/sekolah-home.html
@@ -20,7 +20,7 @@
             <div ui-view></div>
         </div>
         <div class="col-sm-3">
-            <div affix class="affix" data-offset-top="60" data-offset-bottom="200">
+            <div affix class="affix hidden-print" data-offset-top="60" data-offset-bottom="200">
                 <div class="nav-sidebar pull-right">
                     <ul class="nav">
                         <li ui-sref-active="active"><a ui-sref="sekolah-home.index"><i class="icon ion-ios7-browsers-outline"></i> Home</a></li>
