--- a/src/js/sekolah/home/sekolah-home.index.html
+++ b/src/js/sekolah/home/sekolah-home.index.html
@@ -10,6 +10,8 @@
 		<a class="btn btn-primary" ui-sref="sekolah-home.biodata">Mulai Pengisian</a>
 		<br />
 	</li>
+</ul>
+<ul class="list-group">
 	<li class="list-group-item">
 		<h4>Menggunakan Data Server</h4>
 	</li>
