--- a/release/index.html
+++ b/release/index.html
@@ -19,6 +19,8 @@
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="/bower_components/angular-validation/dist/angular-validation.min.js"></script>
+    <script src="/bower_components/angular-validation/dist/angular-validation-rule.min.js"></script>
     <script src="/bower_components/taffydb/taffy-min.js"></script>
     <script src="/bower_components/bootstrap/js/affix.js"></script>
     
